# exploration-algorithms

./: .gitmodules  LICENSE  README.md
aep/gazebo_env/: CMakeLists.txt  package.xml
aep/gazebo_env/drone_models/d435i/: d435i.dae  model.config  model.sdf
aep/gazebo_env/drone_models/os0_64/: model.config  model.sdf
aep/gazebo_env/drone_models/sensored_iris/: model.config  sensored_iris.sdf
aep/rpl_exploration/: CMakeLists.txt
aep/rpl_exploration/config/: exploration_lidar.yaml  exploration_rgbd.yaml
aep/rpl_exploration/launch/: octomap_server_lidar.launch  octomap_server_rgbd.launch  px4_sitl_gazebo.launch  rpl_exploration.launch
aep/rpl_exploration/nodes/: tf_broadcaster.py
fuel/: CMakeLists.txt
nbvp/: nbvp.rviz
nbvp/interface_nbvp_rotors/: CMakeLists.txt
nbvp/nbvplanner/: CMakeLists.txt
oipp/active_3d_planning_app_reconstruction/cfg/experiments/: experiment_visualization.rviz
oipp/active_3d_planning_app_reconstruction/launch/: example.launch  no_unreal_run_experiment.launch
oipp/active_3d_planning_core/src/planner/: online_planner.cpp
rotors_description/meshes/rmf_obelix/: rmf_obelix.dae
rotors_description/urdf/: component_snippets.xacro  firefly_generic_odometry_sensor.gazebo  firefly_vi_sensor.gazebo  m100.gazebo  m100.xacro  m100_base.xacro  m100_pccase.xacro  mav_with_picoflexx.gazebo  rmf_obelix.gazebo  rmf_obelix.xacro  rmf_obelix_base.xacro
rotors_gazebo/models/iris/: iris.sdf
rotors_gazebo/resource/: lee_controller_rmf_obelix.yaml  rmf_obelix.yaml
(+2 files in other folders)
